--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "html-webpack-plugin": "^4.0.0-beta.11",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
+    "sass": "^1.32.11",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "webpack": "^4.42.0",
